<resources>
    <string name="app_name">SqliteDepts</string>
    <string name="noToSearch">N° à chercher</string>
    <string name="noDept">N° département</string>
    <string name="noRegion">N° région</string>
    <string name="nomDept">Nom</string>
    <string name="nomStdDept">Nom standard</string>
    <string name="areaDept">Surface</string>
    <string name="createdDateDept">Date de création</string>
    <string name="capitalDept">Chef-lieu</string>
    <string name="urlDept">URL</string>
    <string name="supprimer_db">Supprimer DB</string>
    <string name="nomRegion">Nom région</string>
</resources>
